--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.3",
+    "cos-js-sdk-v5": "^1.5.0",
     "element-plus": "^2.3.12",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
