--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "axios": "^1.6.3",
     "cos-js-sdk-v5": "^1.5.0",
     "element-plus": "^2.3.12",
+    "pinia": "^2.1.7",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5",
-    "vuex": "^4.0.2"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@iconify-json/ep": "^1.1.12",
