--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.3",
     "cos-js-sdk-v5": "^1.5.0",
+    "dplayer": "^1.27.1",
     "element-plus": "^2.3.12",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
